# zkoc

./: .mailmap  AUTHORS  CMakeLists.txt  LICENSE.txt  appveyor.yml
.github/workflows/: build-windows.yml
CMake/Includes/: ProjectExternals.cmake
src/: FileLogger.cpp  OcSettings.h  key.cpp  keypair.cpp  main.cpp  vpninfo.cpp
src/dialog/: NewProfileDialog.cpp  NewProfileDialog.ui  VpnProtocolModel.cpp  editdialog.cpp  editdialog.ui  logdialog.cpp  logdialog.ui  mainwindow.cpp  mainwindow.ui
